2003-06-18  Eric B. Weddington  <eric@ecentral.com>

	* libc/stdlib/atoi.S: Fix for Bug #3575, by Reiner Patommel.

2003-06-17  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/interrupt.h: Fix for bug #3508.

2003-06-17  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/pgmspace.h: Revert volatile on macros, fix macros to
	specify which registers are used.

2003-06-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/strtoul.c: fix broken unsigned handling.

2003-06-13  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/iom169.h: Add missing EECR bit defines.

2003-06-10  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/sfr_defs.h: Add more comments on the return value of
	the bit_is_set and bit_is_clear macros. [Bug #3839]

2003-06-10  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/sfr_defs.h: Deprecate inb,outb,inw,outw,cbi,sbi macros.
	Remove usage of above macros.
	* include/avr/ina90.h: Remove usage of inb / outb macros.
	* include/avr/interrupt.h: ditto.
	* include/avr/timer.h: ditto.
	* NEWS: Note about deprecation of macros.

2003-06-06  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/boot.h: Add file. Provides new bootloader support API.
	* NEWS: Add note about new bootloader support API.

2003-06-05  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/pgmspace.h: Add __volatile__ to asm macros to fix optimizer
	blunders; use inttypes.h; formatting.

2003-06-03  Theodore A. Roth  <troth@openavr.org>

	* include/avr/signal.h: Remove carriage returns.

2003-05-19  Eric B. Weddington  <eric@ecentral.com>

	* NEWS: Add note about new pgmspace.h API.

2003-05-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Update gcc and binutils version requirements.
	Add note about direct sfr access being preferred over in/out macros.

2003-05-14  Eric B. Weddington <eric@ecentral.com>

	* include/avr/pgmspace.h: New API.
